[fern-generated] Update SDK
Generated by Fern
CLI Version: unknown
Generators:
  - fernapi/fern-java-sdk: 4.8.11